# MLZoomcamp

./: .gitignore  functions.py  miscellaneous.ipynb  pyproject.toml
Classification/: homework.ipynb
Deployment/: Dockerfile  deploy.ipynb  ping.py  predict.py  train.py
Deployment/Homework/: Dockerfile  main.py  pyproject.toml
Evaluation/: evaluation.ipynb  homework.ipynb
Intro/: homework.ipynb
Regression/: car_prediction.ipynb  homework.ipynb
classification/: classification_algorithm.ipynb
